--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "seattle.jpg"
   bio              : "Postdoctoral fellow at UW. Neural dynamics, control, learning"
   location         : "Seattle"
-  employer         :  "University of Washington"
+  employer         : 
   pubmed           : "https://pubmed.ncbi.nlm.nih.gov/?term=harsha+gurnani"
   googlescholar    : "https://scholar.google.com/citations?user=2udZF9sAAAAJ&hl=en"
   email            : "harsha84@uw.edu"
