--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -6,5 +6,5 @@ Name Name:
   email       : "harsha.gurnani.16@ucl.ac.uk"
   bio         : ""
   avatar      : "sevensistersuk.jpg"
-  twitter     : "harshagurnani"
+  twitter     : "harshag.bsky.social"
   google_plus : ""
