--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Harsha Gurnani, PhD"
   avatar           : "seattle.jpg"
-  bio              : "Postdoctoral fellow at UW. Neural dynamics, control, learning"
-  location         : "Seattle"
+  bio              : "Postdoctoral fellow at NYU. Neural dynamics, control, learning"
+  location         : "New York"
   employer         : 
   pubmed           : "https://pubmed.ncbi.nlm.nih.gov/?term=harsha+gurnani"
   googlescholar    : "https://scholar.google.com/citations?user=2udZF9sAAAAJ&hl=en"
-  email            : "harsha84@uw.edu"
+  email            : "hg3206@nyu.edu"
   researchgate     : "https://www.researchgate.net/profile/Harsha-Gurnani"
   uri              :
   bitbucket        :
